load-tests/observability_enabled/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-e
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bal.perf.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: observability-e
            port:
              number: 9090
